# price-oracle

./: .gitignore  README.md  chainConfig.json  tokens.json
contract/: Cargo.toml
contract/src/: main.sw
contract/tests/: harness.rs
contract/tests/artefacts/token/: token_contract-abi.json  token_contract-storage_slots.json
contract/tests/local_tests/: set_price.rs
contract/tests/testnet_actions/: deploy_and_initialize.rs  mod.rs
contract/tests/testnet_tests/: main_test.rs
contract/tests/utils/: local_tests_utils.rs  testnet_tests_utils.rs
frontend/: package-lock.json  package.json
frontend/src/contracts/: OracleAbi.d.ts  index.ts
frontend/src/contracts/factories/: OracleAbi__factory.ts
oracle/: Cargo.toml
oracle-bot/: .gitignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
oracle-bot/src/: config.ts  index.ts  tokens.json
oracle-bot/src/contracts/: OracleAbi.d.ts
oracle-bot/src/contracts/factories/: OracleAbi__factory.ts
oracle-bot/src/services/: mongo.ts  telegramService.ts
oracle-bot/src/utils/: BN.ts  getStateByKey.ts  makeNodeRequest.ts  utils.ts
oracle-bot/tests/: bot.test.ts
oracle/src/: events.sw  interface.sw  main.sw
oracle/tests/local_tests/: mod.rs  set_price.rs
oracle/tests/testnet_tests/: main_test.rs
oracle/tests/utils/: local_tests_utils.rs  testnet_tests_utils.rs
server/: Cargo.toml  Dockerfile
server/src/: main.rs
server/src/utils/: mod.rs  oracle_abi_calls.rs
