[package]
name = "swaygang-price-oracle-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
fuels = { version = "0.35.1", features = ["fuel-core-lib"] }
reqwest = "0.11.14"
serde_json = "1.0.92"
tokio = { version = "1.25.0", features = ["full"] }
